--- a/src/styles/QuestionAnalytics.css
+++ b/src/styles/QuestionAnalytics.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 4rem;
+  overflow: hidden;
 }
 .quiz-details {
   display: flex;
@@ -35,6 +36,7 @@
   flex-direction: column;
   gap: 2.5rem;
   font-family: sans-serif;
+  overflow: scroll;
 }
 .view-question {
   display: flex;
