--- a/src/styles/Trending.css
+++ b/src/styles/Trending.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 10px;
 }
 .total-card {
   background-color: #fff;
