--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -57,6 +57,7 @@
   font-weight: 550;
   cursor: pointer;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 10px;
 }
@@ -81,4 +82,26 @@
 }
 .selected-option {
   border: 2px solid blue;
+}
+
+@media only screen and (max-width: 600px) {
+  .quiz-questions {
+    height: 100vh;
+    width: 100vw;
+    border-radius: 0%;
+    padding: 2rem;
+  }
+  .question-text {
+    font-size: 25px;
+    text-align: center;
+  }
+  .question-options {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .question-option {
+    padding: 1rem 2rem;
+    font-size: 17px;
+  }
 }
