--- a/src/styles/QuizResult.css
+++ b/src/styles/QuizResult.css
@@ -35,3 +35,15 @@
   font-size: 5rem;
   text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+  .result {
+    width: 100vw;
+    height: 100vh;
+    border-radius: 0%;
+  }
+  .result > h1 {
+    text-align: center;
+    font-size: 40px;
+  }
+}
