--- a/src/styles/HomeLayout.css
+++ b/src/styles/HomeLayout.css
@@ -61,3 +61,28 @@
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.12);
   border-radius: 13px;
 }
+.right {
+  height: 100vh;
+  width: 85vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  border: 5px solid white;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
