--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -84,6 +84,24 @@
   border: 2px solid blue;
 }
 
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .quiz-questions {
     height: 100vh;
