--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -13,7 +13,7 @@
   background-color: #fff;
   border-radius: 0.9375rem;
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.15);
-  height: 80vh;
+  padding: 40px 0;
   margin: auto;
   width: 70vw;
 }
@@ -56,7 +56,7 @@
   justify-content: center;
 }
 .form {
-  margin-top: 4rem;
+  margin-top: 3rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -106,5 +106,8 @@
 }
 .input-error {
   border: 1px solid red;
+}
+.input-error::placeholder {
   color: red;
+  opacity: 1;
 }
